--- a/codeception.yml
+++ b/codeception.yml
@@ -21,24 +21,24 @@ modules:
 #            cleanup: true
 #            reconnect: true
 
-# To enable code coverage:
-#coverage:
-#    #c3_url: http://localhost:8080/index-test.php/
-#    enabled: true
-#    #remote: true
-#    #remote_config: '../codeception.yml'
-#    whitelist:
-#        include:
-#            - models/*
-#            - controllers/*
-#            - commands/*
-#            - mail/*
-#    blacklist:
-#        include:
-#            - assets/*
-#            - config/*
-#            - runtime/*
-#            - vendor/*
-#            - views/*
-#            - web/*
-#            - tests/*
+coverage:
+    #c3_url: http://localhost:8080/index-test.php/
+    enabled: true
+    #remote: true
+    #remote_config: '../codeception.yml'
+    whitelist:
+        include:
+            - models/*
+            - controllers/*
+            - commands/*
+            - mail/*
+            - components/*
+    blacklist:
+        include:
+            - assets/*
+            - config/*
+            - runtime/*
+            - vendor/*
+            - views/*
+            - web/*
+            - tests/*
